# kalman_filters_solution

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
doc/: CMakeLists.txt  latexmod.sh  run_html_doc.sh
doc/pictures/RMSE_good/: параметры.txt  параметры_time.txt
doc/pictures/RMSE_good_0.5/: EKF_SRUKFB_SRCKFB_SRECKFB_SREUKFB_timeRelative_MCruns_10000__P_0.5_dt_1.000000.xls
doc/pictures/julier_good/: параметры.txt
doc/pictures/merwe_good/: параметры merwe.txt
src/3d_party/: blas0.cpp  blas0.h  blas1_d.cpp  blas1_d.h  cholupdate_linpack.cpp  cholupdate_linpack.h  linpack_d.cpp  linpack_d.h  matplotlibcpp.h  qr_decomposition.cpp  qr_decomposition.h  timing.cpp  timing.h
src/compare/: CMakeLists.txt  compare.cpp  compare.h  main.cpp
src/kalman_filters/: CMakeLists.txt
src/kalman_filters/include/: kalman_filter_cubature.h  kalman_filter_cubature_square_root.h  kalman_filter_debug.h  kalman_filter_extended.h  kalman_filter_extended_cubature.h  kalman_filter_extended_cubature_square_root.h  kalman_filter_extended_square_root.h  kalman_filter_extended_unscented.h  kalman_filter_extended_unscented_square_root.h  kalman_filter_linear.h  kalman_filter_unscented.h  kalman_filter_unscented_square_root.h
src/kalman_filters/src/: kalman_filter_debug.cpp
test/: CMakeLists.txt  test_kalman_filters.cpp  test_qr_decompositions.cpp
